// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseCard Details component does not have change session button on regular course 1`] = `
<span
  data-testid="CourseCardDetails"
>
  provider-name
   • 
   • 
  acess-message
</span>
`;

exports[`CourseCard Details component has change session button on entitlement course 1`] = `
<span
  data-testid="CourseCardDetails"
>
  provider-name
   • 
   • 
  access-message
   • 
  <Button
    className="m-0 p-0"
    onClick={[MockFunction useSelectSession.openSessionModal]}
    size="inline"
    variant="link"
  >
    Change or leave session
  </Button>
</span>
`;
